feature: se edita agrega la configuracion para crear o actualizar un registro en el modelo de asignacion evaluador. udistrital/Cumplidos_y_certificaciones_documentacion#249
